@@ -1,6 +1,8 @@
 
 Version 1.7  2008-08-25
-  * opt: change fopen to syscall open
+  * performance optimizing: 
+     # change fopen to syscall open
+     # increase the efficiency of socket functions tcpsenddata and tcprecvdata
   * change the return value of socket funtions such as tcpsenddata, 
     tcprecvdata and connectserverbyip
       old return value: result=1 for success, result != 1 fail
@@ -10,6 +12,7 @@ Version 1.7  2008-08-25
      # parameter "log_level" added to server config file
      # keep the log file opened to increase performance
   * Makefile add compile flag -D_FILE_OFFSET_BITS=64 to support large files
+  * restart.sh modified: use external command "expr" to replace shell command "let"
 
 Version 1.6  2008-08-24
   * add restart daemon shell script: restart.sh
